tests/lifetime_error2.june
// error: can't find compatible lifetime between param 'stats' and param 'employee'

struct Stats {
    age: i64
}

struct Employee {
    name: string,
    stats: Stats,
}

fun helper(mut employee: Employee) {
    return helper2(employee, new shared Stats(age: 33))
}

fun helper2(mut employee: Employee, stats: Stats) {
    employee.stats = stats
}

fun main() {
    mut employee = new shared Employee(name: "Sophia", stats: new shared Stats(age: 22))

    helper(employee)

    println(employee.stats.age)
}